[package]
name = "linux-rtic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rtic"

[dependencies]
linux-rtic-macros = { path = "macros" }
rtic-core = "0.3.1"
heapless = "0.7"
lazy_static = "1.4"
pcp-mutex = "0.1"
ctrlc = "3.2"
futex-queue = "0.1"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.2", optional = true }
tracing-chrome = { version = "0.3", optional = true }

[features]
# Enables tracing
profiling = [
    "tracing",
    "tracing-subscriber",
    "tracing-chrome",
]
