[package]
name = "linux-rtic"
version = "0.1.0"
authors = ["Jurgis Balčiūnas <chemicstry@gmail.com>"]
edition = "2021"
description = "A Real-Time Interrupt-driven Concurrency (RTIC) implementation for Linux"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/chemicstry/linux-rtic"
homepage = "https://github.com/chemicstry/linux-rtic"
documentation = "https://docs.rs/linux-rtic"
keywords = ["thread", "concurrency", "linux"]
categories = ["concurrency", "data-structures"]
readme = "README.md"

[lib]
name = "rtic"

[dependencies]
linux-rtic-macros = { path = "macros" }
rtic-core = "0.3.1"
heapless = "0.7"
lazy_static = "1.4"
pcp-mutex = "0.1"
ctrlc = "3.2"
futex-queue = "0.1"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.2", optional = true }
tracing-chrome = { version = "0.3", optional = true }

[features]
# Enables tracing
profiling = [
    "tracing",
    "tracing-subscriber",
    "tracing-chrome",
]
