[package]
name = "linux-rtic-macros"
version = "0.1.1"
authors = ["Jurgis Balčiūnas <chemicstry@gmail.com>"]
edition = "2021"
description = "Procedural macros of the linux-rtic crate"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/chemicstry/linux-rtic"
homepage = "https://github.com/chemicstry/linux-rtic"
documentation = "https://docs.rs/linux-rtic-macros"
keywords = ["thread", "concurrency", "linux"]
categories = ["concurrency", "data-structures"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-error = "1"
quote = "1"
syn = "1"
rtic-syntax = "0.5.0-alpha.4"
